2004-01-19  Steffen Macke <sdteffen@web.de>

	* makefile.msc: updated for new GAIM-like installer build; sync'ed
	ALL_LINGUAS with configure.in

2004-01-18  Hans Breuer  <hans@breuer.org>

	* app/app_procs.c (myXmlErrorReporting) : avoid possible crash 
	by not passing NULL to g_print()

	* app/interface.c (create_toolbox) : actually use
	persitence_register_window() to restore toolbox window size

	* app/makefile.msc lib/makefile.msc : allow to deselect
	building with Freetype by command line to nmake like :
		nmake -f makefile.msc "NOFT2=1"

	* plug-ins/python/diasvg_import.py : handle 'stroke-array' as
	far as possible with Dia's limited line style
	* plug-ins/python/pydia-property.c : allow to get and set
	Linestyle, style and dash(length)

	* lib/object.h : removed typedef for ObjectId not use anywhere

2004-01-17  Hans Breuer  <hans@breuer.org>

	* objects/custom/shape_info.[hc] objects/custom/custom_object.c
	  doc/shape.dtd doc/custom-shapes : 
	support for images in custom shapes, also removed some long-time
	dead code

	* doc/en/*.xml : fixed crippled line ends which get created
	when windoze line ends are checkin from the unix side

2004-01-13  Laurent Dhima  <laurenti@alblinux.net>

	* configure.in: Added "sq" to ALL_LINGUAS.

2004-01-11  Hans Breuer  <hans@breuer.org>

	[more less leaks ;-]
	
	* objects/SADT/annotation.c : use text_destroy() not g_free()
	
	* objects/chronogram/chronoline.c : neither leak chronoline::events
	nor chronoline::name

	* objects/wpg/wpg.c : don't g_free() but g_object_unref(renderer);

2004-01-11  Hans Breuer  <hans@breuer.org>

	* lib/properties.h :
	* objects/custom/custom_object.c : more properties optional
	to be backward compatible for older diagrams not having them 
	set. (Try to load samples/all_objects.dia)
	
	[less memory leaks thanks valgrind ;-]
	
	* app/recent_files.c (recent_file_history_write) : 
	g_free(history_filename);
	(recent_file_menu_item) : use g_path_get_basename() 