@@ -11,6 +11,7 @@
 #define HAVE_DIRENT_H
 
 #define ENABLE_NLS
+#define HAVE_BIND_TEXTDOMAIN_CODESET
 #define GETTEXT_PACKAGE "dia"
 #define LOCALEDIR "../lib/locale"
 
